force-app/main/default/objects/Response_Library__c/Response_Library__c.object-meta.xml
<CustomObject>
    <label>Response Library</label>
    <nameField>
        <displayFormat>Response - {000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Library</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>