force-app/main/default/objects/Response_Library__c/fields/Bid_Name__c.field-meta.xml
<CustomField>
    <fullName>Bid_Name__c</fullName>
    <label>Bid Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>