force-app/main/default/objects/Response_Library__c/fields/Created_by_RFX__c.field-meta.xml
<CustomField>
    <fullName>Created_by_RFX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by RFX</label>
    <type>Checkbox</type>
</CustomField>