force-app/main/default/objects/Response_Library__c/fields/Has_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Has_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Attachments?</label>
    <type>Checkbox</type>
</CustomField>