force-app/main/default/objects/Response_Library__c/fields/Number_of_Times_Used__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times_Used__c</fullName>
    <inlineHelpText>The number of times this Response has been used to fully or partially populate a Bid Response.</inlineHelpText>
    <label>Number of Times Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>