force-app/main/default/objects/Response_Library__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Response Library</relationshipLabel>
    <relationshipName>Response_Library</relationshipName>
    <type>Lookup</type>
</CustomField>