force-app/main/default/objects/Response_Library__c/fields/Requirement_Name__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Name__c</fullName>
    <label>Requirement Name</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>