force-app/main/default/objects/Response_Library__c/fields/Requirement_Name_Plan_Text__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Name_Plan_Text__c</fullName>
    <label>Requirement Name Plan Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>