force-app/main/default/objects/Response_Library__c/fields/Review_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Review_Cycle__c</fullName>
    <label>Review Cycle</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>