force-app/main/default/objects/Response_Library__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Response Library</relationshipLabel>
    <relationshipName>Response_Library</relationshipName>
    <type>Lookup</type>
</CustomField>