force-app/main/default/objects/Response_Library__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>TextArea</type>
</CustomField>